Add support for controller version 7.5.165
* Downgrade to ubuntu 20.04 in order to support mongodb 3.6
* Update openjdk to version 17
* Fix longstanding bug with run dir being mounted on /var/run/unifi in compose file
* Add required jvm flag to support deep reflection of java.time